--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="slacker">
+<html ng-app="app">
   <head>
     <title>Slacker</title>
     <link rel="icon" type="image/png" href="icon.png" />
