Added an About link

--- a/app/styles/company.scss
+++ b/app/styles/company.scss
@@ -4,6 +4,17 @@
   padding: 20px;
 }
 
+.about {
+  color: #999;
+  margin-top: 80px;
+
+  a {
+    color: #999;
+    text-decoration: underline;
+  }
+}
+
+
 .panel {
   position: fixed;
   top: 0;
