--- a/app/views/company.html
+++ b/app/views/company.html
@@ -17,6 +17,10 @@
         </li>
       </ul>
     </div>
+
+    <div class="about">
+      Made with love by <a href="http://nathanhoad.net">Nathan Hoad</a>. Sponsored by <a href="http://sidelab.com">Sidelab</a>
+    </div>
   </div>
 
   <div class="panel pick-a-character" ng-show="!message">
