Changed from Sass to Less and added some new characters

--- a/app/styles/company.less
+++ b/app/styles/company.less
@@ -31,7 +31,7 @@ h1 {
   font-weight: normal;
   font-size: 25px;
   margin-bottom: 25px;
-  
+
   a {
     color: #999;
 
@@ -82,7 +82,8 @@ ul {
 .character {
   text-align: center;
   cursor: pointer;
-  
+  min-height: 155px;
+
   img {
     width: 100px;
     height: 100px;
@@ -108,7 +109,7 @@ ul {
     border-radius: 6px;
     padding: 10px;
     position: relative;
-    
+
     .arrow {
       position: absolute;
       top: 40px;
