--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,7 +7,7 @@
   <div class="signup">
     <form ng-submit="createCompany()">
       <div class="previous-company" ng-show="previousCompany">
-        <a ng-href="/#/{{previousCompany.data}}" class="btn btn-success btn-lg btn-block">Go back to {{previousCompany.name}}</a>
+        <a ng-href="/{{previousCompany.data}}" class="btn btn-success btn-lg btn-block">Go back to {{previousCompany.name}}</a>
         <p>or</p>
       </div>
 
