Change the about text on the company screen

--- a/app/styles/company.less
+++ b/app/styles/company.less
@@ -5,11 +5,13 @@
 }
 
 .about {
-  color: #999;
-  margin-top: 80px;
+  color: #ff8000;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 
   a {
-    color: #999;
+    color: #ff8000;
     text-decoration: underline;
   }
 }
