--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="signup">
-    <form ng-submit="createCompany()">
+    <form ng-submit="homeService.createCompany()">
       <div class="previous-company" ng-show="previousCompany">
         <a ng-href="/{{previousCompany.data}}" class="btn btn-success btn-lg btn-block">Go back to {{previousCompany.name}}</a>
         <p>or</p>
