--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,18 @@
     <script type="text/javascript" src="bower.min.js"></script>
     <script type="text/javascript" src="app.min.js"></script>
   </head>
-  <body ng-view>
+  <body>
+    <div ng-view></div>
+
+    <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42563490-9', 'sidelab.com');
+      ga('require', 'displayfeatures');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
