--- a/app/client/styles/home.less
+++ b/app/client/styles/home.less
@@ -3,7 +3,8 @@
     background: url('home.png') no-repeat 50% -5px;
     max-width: 900px;
     margin: auto;
-    padding-top: 220px;
+    margin-bottom: 60px;
+    padding-top: 210px;
 
     transition: background-position 0.2s ease;
     -webkit-transition: background-position 0.2s ease;
@@ -13,32 +14,38 @@
     &:hover {
       background-position: 50% 0px;
     }
-  }
 
-  h1 {
-    text-align: center;
-    font-size: 50px;
-    margin: 0 0 10px 0;
-    padding: 0;
-    font-weight: normal;
-  }
-  h2 {
-    text-align: center;
-    font-size: 20px;
-    color: #999;
-    margin: 0 0 20px 0;
-    padding: 0;
-    font-weight: normal;
-
-    a {
+    h1 {
+      text-align: center;
+      font-size: 50px;
+      margin: 0 0 10px 0;
+      padding: 0;
+      font-weight: normal;
+    }
+    h2 {
+      text-align: center;
+      font-size: 20px;
       color: #999;
-      text-decoration: underline;
+      margin: 0 0 20px 0;
+      padding: 0;
+      font-weight: normal;
+
+      a {
+        color: #999;
+        text-decoration: underline;
+      }
     }
   }
 
   form {
     max-width: 400px;
     margin: auto;
+    
+    .help-block {
+      a {
+        color: #999;
+      }
+    }
   }
 
   .previous-company {
