--- a/app/client/styles/company.less
+++ b/app/client/styles/company.less
@@ -60,7 +60,7 @@ ul {
 
   li {
     float: left;
-    width: 100px;
+    width: 80px;
     margin: 0 15px 20px 15px;
 
     transition: all 0.2s ease;
@@ -87,8 +87,8 @@ ul {
   min-height: 155px;
 
   img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     margin-bottom: 10px;
   }
@@ -103,6 +103,11 @@ ul {
     float: left;
     margin-right: 10px;
     border-radius: 5px;
+    
+    img {
+      width: 100px;
+      height: 100px;
+    }
   }
 
   .message {
