Updated Sidelab to NGU Technology

--- a/app/views/company.html
+++ b/app/views/company.html
@@ -46,6 +46,6 @@
   </div>
 
   <div class="about">
-    <a href="http://nathanhoad.net">Nathan Hoad</a> &amp; <a href="http://sidelab.com">Sidelab</a>
+    <a href="http://nathanhoad.net">Nathan Hoad</a> &amp; <a href="http://ngutechnology.com.au">NGU Technology</a>
   </div>
 </div>
