--- a/app/views/home.html
+++ b/app/views/home.html
@@ -30,6 +30,6 @@
   </div>
 
   <div class="footer">
-    Made with love by <a href="http://nathanhoad.net">Nathan Hoad</a>. Sponsored by <a href="http://sidelab.com">Sidelab</a>
+    Made with love by <a href="http://nathanhoad.net">Nathan Hoad</a>. Sponsored by <a href="http://ngutechnology.com.au">NGU Technology</a>
   </div>
 </div>
