--- a/app/client/styles/company.less
+++ b/app/client/styles/company.less
@@ -157,4 +157,33 @@ ul {
       opacity: 0.6;
     }
   }
+  
+  .delete-character {
+    margin-top: 10px;
+    padding-right: 10px;
+    text-align: right;
+    
+    a {
+      color: #900;
+    }
+  }
+}
+
+.custom-character {
+  .character {
+    float: left;
+    margin-right: 10px;
+    border-radius: 5px;
+    
+    img {
+      width: 100px;
+      height: 100px;
+    }
+  }
+  
+  .character-details {
+    margin-left: 120px;
+    padding: 10px;
+    position: relative;
+  }
 }
