Users can now edit their custom characters

--- a/app/client/styles/company.less
+++ b/app/client/styles/company.less
@@ -158,13 +158,14 @@ ul {
     }
   }
   
-  .delete-character {
+  .character-actions {
     margin-top: 10px;
     padding-right: 10px;
     text-align: right;
+    color: #999;
     
     a {
-      color: #900;
+      color: #333;
     }
   }
 }
