Added OpenGraph tags

--- a/app/client/styles/company.less
+++ b/app/client/styles/company.less
@@ -85,6 +85,10 @@ ul {
   text-align: center;
   cursor: pointer;
   min-height: 155px;
+  
+  &.custom {
+    color: #060;
+  }
 
   img {
     width: 80px;
