--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,10 +3,18 @@
   <head>
     <title>Slacker</title>
     <link rel="icon" type="image/png" href="icon.png" />
+    
     <link rel="stylesheet" href="bower.min.css" />
     <link rel="stylesheet" href="app.min.css" />
     <script type="text/javascript" src="bower.min.js"></script>
     <script type="text/javascript" src="app.min.js"></script>
+    
+    <meta name="description" content="Funny replies for Slack" />
+    <meta property="og:title" content="Slacker" />
+    <meta property="og:site_name" content="Slacker" />
+    <meta property="og:url" content="http://slacker.ngutechnology.com.au" />
+    <meta property="og:description" content="Funny replies for Slack" />
+    <meta property="og:image" content="http://slacker.ngutechnology.com.au/share.png" />
   </head>
   <body>
     <div ng-view></div>
