--- a/app/client/styles/home.less
+++ b/app/client/styles/home.less
@@ -60,6 +60,46 @@
       margin-bottom: 15px;
     }
   }
+  
+  
+  .info {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    background: #eee;
+    margin-top: 90px;
+    padding: 20px 0;
+    
+    .info-content {
+      max-width: 600px;
+      margin: auto;
+    }
+    
+    h3 {
+      font-weight: normal;
+      color: #666;
+    }
+    
+    ul {
+      width: 100%;
+      overflow: hidden;
+      list-style: none;
+      margin: 20px 0;
+      padding: 0 50px;
+      
+      li {
+        float: left;
+        display: block;
+        width: 50px;
+        height: 50px;
+        margin: 0 10px 10px 0;
+        
+        img {
+          border-radius: 50%;
+          max-width: 100%;
+        }
+      }
+    }
+  }
 
 
   .footer {
