--- a/app/views/home.html
+++ b/app/views/home.html
@@ -19,7 +19,7 @@
         <label>Webhooks URL</label>
         <input ng-model="company.url" class="form-control input-lg" placeholder="http://yourcompany.slack.com/services/hooks/incoming-webhook?token=yourtoken" />
         <div class="help-block">
-          <a href="https://my.slack.com/services/new/incoming-webhook" target="_blank">You can get your Webhooks URL from here...</a>
+          <a href="https://my.slack.com/services/new/incoming-webhook" target="_blank">You can get your Webhooks URL by clicking here.</a>
         </div>
       </div>
 
@@ -27,6 +27,18 @@
         <button type="submit" class="btn btn-danger btn-lg btn-block">Get started</button>
       </div>
     </form>
+  </div>
+  
+  <div class="info">
+    <div class="info-content">
+      <h3>Theres a bunch of built in characters...</h3>
+      <ul>
+        <li ng-repeat="character in characters">
+          <img ng-src="{{character.icon_url}}">
+        </li>
+      </ul>
+      <h3 class="text-right">...but you can also add your own!</h3>
+    </div>
   </div>
 
   <div class="footer">
