--- a/app/client/styles/home.less
+++ b/app/client/styles/home.less
@@ -70,34 +70,19 @@
     padding: 20px 0;
     
     .info-content {
-      max-width: 600px;
+      max-width: 900px;
       margin: auto;
+    }
+    
+    img {
+      max-width: 100%;
     }
     
     h3 {
       font-weight: normal;
       color: #666;
-    }
-    
-    ul {
-      width: 100%;
-      overflow: hidden;
-      list-style: none;
-      margin: 20px 0;
-      padding: 0 50px;
-      
-      li {
-        float: left;
-        display: block;
-        width: 50px;
-        height: 50px;
-        margin: 0 10px 10px 0;
-        
-        img {
-          border-radius: 50%;
-          max-width: 100%;
-        }
-      }
+      text-align: center;
+      font-size: 18px;
     }
   }
 
