Slight change to OpenGraph tags

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="app.min.js"></script>
     
     <meta name="description" content="Post funny replies to Slack as your favourite character." />
-    <meta property="og:title" content="Slacker" />
+    <meta property="og:title" content="Slacker - Funny replies for Slack" />
     <meta property="og:site_name" content="Slacker" />
     <meta property="og:url" content="http://slacker.ngutechnology.com.au" />
     <meta property="og:description" content="If I could get you to go ahead and start posting funny replies into Slack that'd be greeeaaat." />
