Updated link to my blog to be a deep link to the post about Slacker

--- a/app/views/company.html
+++ b/app/views/company.html
@@ -92,6 +92,6 @@
   </div>
 
   <div class="about">
-    <a href="http://nathanhoad.net">Nathan Hoad</a> &amp; <a href="http://ngutechnology.com.au">NGU Technology</a>
+    <a href="http://nathanhoad.net/slacker-post-to-slack-as-your-favourite-character">Nathan Hoad</a> &amp; <a href="http://ngutechnology.com.au">NGU Technology</a>
   </div>
 </div>
