--- a/app/views/home.html
+++ b/app/views/home.html
@@ -46,6 +46,6 @@
   </div>
 
   <div class="footer">
-    Made with love by <a href="http://nathanhoad.net/">Nathan Hoad</a>. Sponsored by <a href="http://ngutechnology.com.au">NGU Technology</a>
+    Made with love by <a href="http://nathanhoad.net/slacker-post-to-slack-as-your-favourite-character">Nathan Hoad</a>. Sponsored by <a href="http://ngutechnology.com.au">NGU Technology</a>
   </div>
 </div>
