Added support for HipChat

--- a/app/client/styles/home.less
+++ b/app/client/styles/home.less
@@ -47,6 +47,23 @@
       }
     }
   }
+  
+  .pick-service {
+    .nav > li {
+      &.active > a > img {
+        opacity: 1;
+      }
+      
+      & > a > img {
+        cursor: pointer;
+        opacity: 0.5;
+      }
+    }
+  }
+  
+  .get-started {
+    margin-top: 40px;
+  }
 
   .previous-company {
     a {
