--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,7 @@
 <div class="home">
   <div class="header">
     <h1>Slacker</h1>
-    <h2>Post funny replies to <a href="https://slack.com/" target="_blank">Slack</a> as your favourite character.</h2>
+    <h2>Post funny replies to <a href="https://slack.com/" target="_blank">Slack</a> or <a href="https://www.hipchat.com/">HipChat</a> as your favourite character.</h2>
   </div>
 
   <div class="signup">
@@ -12,18 +12,38 @@
       </div>
 
       <div class="form-group">
-        <label>Company name</label>
-        <input ng-model="company.name" class="form-control input-lg" placeholder="My Company" autofocus="true" />
+        <label>Organisation name</label>
+        <input ng-model="company.name" class="form-control input-lg" placeholder="My Organisation" autofocus="true" />
       </div>
-      <div class="form-group">
-        <label>Webhooks URL</label>
-        <input ng-model="company.url" class="form-control input-lg" placeholder="http://yourcompany.slack.com/services/hooks/incoming-webhook?token=yourtoken" />
+      
+      <div class="form-group pick-service" id="pick-service">
+        <ul class="nav nav-tabs">
+          <li id="slack-tab" class="active">
+            <a href="#" ng-click="homeService.pickService('slack')"><img src="slack-logo.png" /></a>
+          </li>
+          <li id="hipchat-tab">
+            <a href="#" ng-click="homeService.pickService('hipchat')"><img src="hipchat-logo.png" /></a>
+          </li>
+        </ul>
+      </div>
+      
+      <div class="form-group" id="slack-url">
+        <label>Slack Webhooks URL</label>
+        <input id="slack-url-input" ng-model="company.url" class="form-control input-lg" placeholder="http://yourcompany.slack.com/services/hooks/incoming-webhook?token=yourtoken" />
         <div class="help-block">
           <a href="https://my.slack.com/services/new/incoming-webhook" target="_blank">You can get your Webhooks URL by clicking here.</a>
         </div>
       </div>
+      
+      <div class="form-group" id="hipchat-url" style="display: none">
+        <label>HipChat API token</label>
+        <input id="hipchat-url-input" ng-model="company.url" class="form-control input-lg" />
+        <div class="help-block">
+          <a href="https://www.hipchat.com/admin/api" target="_blank">You can get your HipChat API token by clicking here.</a>
+        </div>
+      </div>
 
-      <div class="form-group">
+      <div class="form-group get-started">
         <button type="submit" class="btn btn-danger btn-lg btn-block">Get started</button>
       </div>
     </form>
