--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,11 +9,11 @@
     <script type="text/javascript" src="bower.min.js"></script>
     <script type="text/javascript" src="app.min.js"></script>
     
-    <meta name="description" content="Post funny replies to Slack as your favourite character." />
-    <meta property="og:title" content="Slacker - Funny replies for Slack" />
+    <meta name="description" content="Post funny replies to Slack or HipChat as your favourite character." />
+    <meta property="og:title" content="Slacker - Funny replies for Slack or HipChat" />
     <meta property="og:site_name" content="Slacker" />
     <meta property="og:url" content="http://slacker.ngutechnology.com.au" />
-    <meta property="og:description" content="If I could get you to go ahead and start posting funny replies into Slack that'd be greeeaaat." />
+    <meta property="og:description" content="If I could get you to go ahead and start posting funny replies into Slack or HipChat that'd be greeeaaat." />
     <meta property="og:image" content="http://slacker.ngutechnology.com.au/share.png" />
   </head>
   <body>
