Preparing for Heroku

--- a/app/client/styles/company.less
+++ b/app/client/styles/company.less
@@ -73,7 +73,7 @@
 
 
   .pick-a-character {
-    background: url('pick-a-character.png') no-repeat 30px 150px #eee;
+    background: url('/pick-a-character.png') no-repeat 30px 150px #eee;
     padding-top: 220px;
     padding-left: 40px;
     font-size: 30px;
