--- a/app/client/styles/home.less
+++ b/app/client/styles/home.less
@@ -1,6 +1,6 @@
 .home {
   .header {
-    background: url('home.png') no-repeat 50% -5px;
+    background: url('/home.png') no-repeat 50% -5px;
     max-width: 900px;
     margin: auto;
     margin-bottom: 60px;
