--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,17 +4,17 @@
     <title>Slacker</title>
     <link rel="icon" type="image/png" href="icon.png" />
     
-    <link rel="stylesheet" href="bower.min.css" />
-    <link rel="stylesheet" href="app.min.css" />
-    <script type="text/javascript" src="bower.min.js"></script>
-    <script type="text/javascript" src="app.min.js"></script>
+    <link rel="stylesheet" href="/bower.min.css" />
+    <link rel="stylesheet" href="/app.min.css" />
+    <script type="text/javascript" src="/bower.min.js"></script>
+    <script type="text/javascript" src="/app.min.js"></script>
     
     <meta name="description" content="Post funny replies to Slack or HipChat as your favourite character." />
     <meta property="og:title" content="Slacker - Funny replies for Slack or HipChat" />
     <meta property="og:site_name" content="Slacker" />
-    <meta property="og:url" content="http://slacker.ngutechnology.com.au" />
+    <meta property="og:url" content="http://slacker.nathanhoad.net" />
     <meta property="og:description" content="If I could get you to go ahead and start posting funny replies into Slack or HipChat that'd be greeeaaat." />
-    <meta property="og:image" content="http://slacker.ngutechnology.com.au/share.png" />
+    <meta property="og:image" content="http://slacker.nathanhoad.net/share.png" />
   </head>
   <body>
     <div ng-view></div>
