--- a/app/client/styles/app.less
+++ b/app/client/styles/app.less
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Gloria+Hallelujah);
+@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
 @import 'home';
 @import 'company';
