--- a/app/views/home.html
+++ b/app/views/home.html
@@ -31,7 +31,7 @@
         <label class="control-label">Slack API Token <span class="error" ng-if="errors.token">{{errors.token}}</span></label>
         <input id="slack-token-input" ng-model="company.token" class="form-control input-lg" />
         <div class="help-block">
-          <a href="https://api.slack.com/web#auth" target="_blank">You can get a Slack API Token from https://api.slack.com/web#auth</a>
+          <a href="https://api.slack.com/web#authentication" target="_blank">You can get a Slack API Token from https://api.slack.com/web#authentication</a>
         </div>
       </div>
       
